# benri-qr

./: Cargo.toml  README.md  asset-manifest.json  index.html  manifest.json
.github/workflows/: deploy.yml
react/: package-lock.json  package.json
react/public/: index.css  index.html
react/src/: App.tsx  index.css
src/: default.css  lib.rs  main.rs
static/js/: main.55d4ebbb.js  main.55d4ebbb.js.map  main.621738d7.js  main.621738d7.js.map  main.c42b4d6e.js  main.c42b4d6e.js.map
static/media/: benri_qr_bg.75b0c9f6b6bbb2364bdb.wasm  benri_qr_bg.ada3e3558d1c695f8857.wasm
