[package]
name = "benri-qr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "contactqr"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qrcode = { version = "0", features = ["svg"], default-features = false }
calamine = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "3", features = ["derive"] }
